# Hydra

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: analyzer_benchmarks.rs
docs/: IMPLEMENTATION_PLAN.md  README.md  developer_guide.md  user_guide.md
src/: cli.rs  lib.rs  main.rs
src/analyzer/: analysis.rs  call_graph.rs  call_stack.rs  capability_checks.rs  config.rs  control_flow.rs  control_flow_analyzer.rs  dos_detector.rs  escape_analysis.rs  gas_estimator.rs  invariant_checks.rs  invariant_parser.rs  invariant_tracking.rs  loop_analysis.rs  loop_context.rs  loop_invariant.rs  loop_reference.rs  loop_state.rs  mod.rs  module_analysis.rs  module_boundary.rs  mutable_ref_checker.rs  object_lifecycle.rs  object_state.rs  parser.rs  path_analysis.rs  path_conditions.rs  path_evaluator.rs  path_merge.rs  path_merge_state.rs  path_sensitive.rs  path_tracking.rs  pattern_database.rs  reference_context.rs  reference_flow.rs  reference_flow_sui.rs  reference_path.rs  reference_state.rs  reference_transitions.rs  safety_checker.rs  (+6 more)
src/bench/: mod.rs  sui_bench.rs
src/cli/: interface.rs  mod.rs
src/config/: mod.rs
src/error/: mod.rs  reporter.rs
src/logging/: error_logger.rs  mod.rs
src/output/: call_graph_output.rs
src/package/: mod.rs
src/perf/: mod.rs
src/rust_tests/: mod.rs  performance_tests.rs  real_module_tests.rs  reference_safety_tests.rs  reference_tracking_tests.rs  safety_violation_tests.rs  test_data.rs  test_runner.rs
src/sarif/: mod.rs  reporter.rs
tests/: integration_test.rs
tests/test_beta/: arithmetic_vulns.move  (+9 more)
(+20 files in other folders)
