[package]
name = "hydra-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A static analyzer for Sui Move smart contracts"
license = "MIT"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
chrono = "0.4"
rayon = "1.7"
lazy_static = "1.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and output
log = "0.4"
env_logger = "0.10"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Testing
tempfile = "3.8"

# Output formatting
colored = "2.0"

[dev-dependencies]
pretty_assertions = "1.4"
criterion = "0.5"

[[bench]]
name = "analyzer_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[profile.dev]
opt-level = 0
debug = true

[features]
default = []
strict = []

[[bin]]
name = "hydra-analyzer"
path = "src/main.rs"

[lib]
name = "hydra_analyzer"
path = "src/lib.rs"